helth and logging for ops
